# school

./: README.md
2022/: README.md
2022/Fall/: README.md
2022/Spring/: README.md
2022/Spring/Computers in Engineering/homework/hw5/: CMakeLists.txt  DoodleFunctions.cpp  DoodleFunctions.h
2023/: README.md
2023/Spring/: README.md
2023/Spring/Internet of Things/: README.md
Computers in Engineering/: README.md
Computers in Engineering/homework/hw1/: CMakeLists.txt
Computers in Engineering/homework/hw2/: CMakeLists.txt  main.cpp
Computers in Engineering/homework/hw3/: CMakeLists.txt  Wordle.cpp  Wordle.h  wordList.txt
Computers in Engineering/homework/hw5/: main.cpp
Computers in Engineering/homework/hw7/: AsteroidFunctions.h  main2.cpp
Computers in Engineering/homework/hw8/: MyList.cpp  MyList.h  Node.cpp
Industrial Internet of Things/: README.md
Industrial Internet of Things/labs/lab2/: main.py
Industrial Internet of Things/labs/lab4/: main.py
Industrial Internet of Things/labs/lab5/: stepper.py  util.py
Industrial Internet of Things/labs/lab6/: hcsr04.py  led.py  server.py  util.py
Industrial Internet of Things/labs/lab7/: adc.py
Industrial Internet of Things/labs/lab8/: db.py  main.py  style.css
Internet of Things/homework/hw1/: main.py
Internet of Things/homework/hw2/: main.ipynb
Internet of Things/labs/: README.md
Internet of Things/labs/lab1/: README.md
Robotics and Automation/: README.md
Robotics and Automation/homework/hw1/: main.py
Robotics and Automation/homework/hw2/: main.py
(+55 files in other folders)
